ENTRYSTORE-843 Spring-boot - Add ErrorResponse model